plugins {
    id 'java'
    id 'io.franzbecker.gradle-lombok' version '1.14'
}

group 'net.daporkchop'
version '0.0.6-tarconverter'

sourceCompatibility = 1.8

repositories {
    mavenLocal()
    maven {
        name = 'DaPorkchop_'
        url = 'https://maven.daporkchop.net/'
    }
    mavenCentral()
}

dependencies {
    testCompile group: 'junit', name: 'junit', version: '4.12'

    compile 'com.google.code.gson:gson:2.8.5'
    compile 'net.daporkchop.lib:binary:0.2.1-SNAPSHOT'
    compile 'net.daporkchop.lib:primitive:0.2.1-SNAPSHOT'
    compile 'net.daporkchop.lib:nbt:0.2.0'
    compile 'com.zaxxer:SparseBitSet:1.1'
    //compile 'org.brotli:dec:0.1.2'
    compile 'com.flowpowered:flow-nbt:1.0.1-SNAPSHOT'

    compile "de.schlichtherle.truezip:truezip-file:7.7.10"
    compile "de.schlichtherle.truezip:truezip-driver-tar:7.7.10"

    compile 'org.jfree:jfreechart:1.5.0'

    testCompile 'org.apache.maven.indexer:indexer-core:6.0.1-SNAPSHOT'
    testCompile 'org.apache.maven.wagon:wagon-http:2.12'
    testCompile 'org.eclipse.sisu:org.eclipse.sisu.plexus:0.3.3'
}

jar {
    from {
        configurations.compile.collect {
            zipTree(it)
        }
    } {
        exclude "META-INF/*.SF"
        exclude "META-INF/*.DSA"
        exclude "META-INF/*.RSA"
    }

    manifest {
        attributes 'Implementation-Title': 'DaPorkchop_ok',
                'Implementation-Version': version,
                //'Main-Class': 'net.daporkchop.regionmerger.RegionMerger'
                'Main-Class': 'net.daporkchop.regionmerger.anvil.pork.tar.ToTARConverter'
    }
}
